--- a/docker/config/pip/requirements.txt
+++ b/docker/config/pip/requirements.txt
@@ -1,15 +1,15 @@
 osrf-pycommon==0.1.9
 llvmlite==0.31.0
 tqdm==4.52.0
-numpy
-pyyaml
-librosa==0.6.3
+numpy==1.19
+pyyaml==5.4.1
+librosa
 mir_eval
 matplotlib
 tensorboardX
 Pillow
 ffmpeg-normalize
-numba
+numba==0.48
 SoundFile==0.10.2
 torch
 torchvision
